--- a/config.toml
+++ b/config.toml
@@ -19,7 +19,7 @@ disableKinds = ["taxonomy", "term"]
     { stack-overflow = "https://stackoverflow.com/users/18233221/mihai-a" },
     { instagram = "https://www.instagram.com/mihai.aldoiu/" }, 
     { flickr = "https://www.shutterstock.com/g/maldoiu" }    
-    # { email = "mailto:hello@your_domain.com" },
+    { email = "mailto:mihai@aldoiu.ro" },
   ]
 
 [module]
